--- a/pages/player/player.wxss
+++ b/pages/player/player.wxss
@@ -15,7 +15,7 @@
   background-color: rgba(0,0,0,0.5);
   flex-direction: column;
   align-items: center;
-  padding-top: 25rpx 
+  padding-top: 25rpx;
 }
 
 .song-name {
@@ -33,6 +33,26 @@
   text-align: center;
   padding-top: 20rpx;
 }
+
+.song-lyric {
+  margin-top: 50%;
+}
+.song-lyric-con {
+  text-align: center;
+  padding: 25rpx 45rpx;
+  display: none;
+  transition: all 0.35s ease-in-out;
+}
+.song-lyric-con.ready {
+  color: #9E9E9E;
+  opacity: 0.9;
+  display: block;
+}
+ .song-lyric-con.select {
+   color: #FFF;
+   opacity: 1;
+   display: block;
+ }
 
 .music-ctrl {
   background-color: #6d6d6d;
