--- a/pages/recommend/recommend.wxss
+++ b/pages/recommend/recommend.wxss
@@ -25,7 +25,6 @@
 	display: flex;
 	flex: 1;
 	padding: 30rpx;
-
 }
 
 .song-content view {
@@ -44,4 +43,43 @@
 	box-sizing: border-box;
 	margin-right: 40rpx;
 	margin-top: 50rpx;
+}
+
+.backPlay {
+	display: flex;
+	flex-direction: row;
+	position: fixed;
+	bottom: 0rem;
+	left: 0;
+	width: 100%;
+	height: 100rpx;
+	background-color: #fff;
+	opacity: 0.95;
+	box-shadow: 0px 0px 15px 2px #aaa;
+}
+
+.backPlay image {
+	width: 85rpx;
+	height: 85rpx;
+	padding: 8rpx 30rpx;
+
+}
+
+.backPlay-msg {
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+	position: absolute;
+	top: 0.3rem;
+	left: 150rpx;
+}
+
+.backPlay-msg text {
+	font-size: 16px;
+}
+
+.backPlay-msg .author {
+	padding-top: 15rpx;
+	font-size: 12px;
+	color: #888;
 }
