update playlist reloads way

--- a/pages/recommend/recommend.wxml
+++ b/pages/recommend/recommend.wxml
@@ -1,4 +1,4 @@
-<scroll-view scroll-y="true">
+<scroll-view scroll-y="true" scroll-top="{{scrollTop}}" style="height:{{scrollHeight}}px;" bindscrolltolower="loadMore">
   <block wx:for="{{ songRec }}" wx:for-item="song" wx:key="song">
     <view class="song_list">
       <view class="song-album">
